--- a/test1_hosbital/views/appointment_view.xml
+++ b/test1_hosbital/views/appointment_view.xml
@@ -8,6 +8,7 @@
             <activity string="Appointment Activity">
                 <!--هعرف الحاجات اللي هستخدمها في الاكتفتي زي الاسم و الرقم المرجعي للمريض هكذا -->
                 <field name="patient_id"/>
+                <field name="mo_number"/>
                 <field name="ref"/>
                 <!--الشكل اللي هيظهر فيه البيانات -->
                 <templates>
@@ -20,6 +21,7 @@
                         <div>
                             <!--الحاجه اللي هتتعرض بجانب الصوره-->
                             <field name="patient_id" display="full"/>
+                            <field name="mo_number"/>
                             <field name="ref" display="full"/>
                         </div>
                     </dev>
@@ -50,6 +52,7 @@
             <tree delete="0" edit="1" decoration-success="state == 'done'" decoration-info="state == 'in_consultation'"
                   decoration-danger="state == 'cancel'" sample="1" multi_edit="1">
                 <field name="patient_id"/>
+                <field name="mo_number"/>
                 <!--optional="show or hide " ديه عشان اعمل دينامك فيو ... عشان تظهرلي ال تلات نقط واخطار منها ايه يظهر وايه لا  -->
                 <field name="ref" optional="hide"/>
 
@@ -127,6 +130,7 @@
                     <group>
                         <group>
                             <field name="patient_id"/>
+                            <field name="mo_number"/>
                             <field name="ref"/>
                             <field name="gender"/>
 
