--- a/test1_hosbital/views/patient_tags.xml
+++ b/test1_hosbital/views/patient_tags.xml
@@ -31,6 +31,7 @@
                     <group>
                         <group>
                             <field name="name" string="Tags Name"/>
+                            <field name="sequence" string="Tags Sequence"/>
                         </group>
                         <group>
                             <!--<field name="color_char" widget="color"/> ديه هتختار الالوان برضه بس باختيارات اوسع -->
